--- a/Scrape_Script.ipynb
+++ b/Scrape_Script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 650,
+   "execution_count": 684,
    "id": "94077bdc-b7d7-4043-8324-6e38d38c0c20",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 651,
+   "execution_count": 685,
    "id": "8f81c82c-bced-4bff-80ff-81bb0e882c4a",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 652,
+   "execution_count": 686,
    "id": "c4466258-3d70-4d6f-8a49-87dfd7962e78",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 653,
+   "execution_count": 687,
    "id": "8cb17e5f-7789-4c3f-b117-8ec663ef97ae",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 654,
+   "execution_count": 688,
    "id": "d303ca37-118c-48df-bc87-124c81efcfe7",
    "metadata": {},
    "outputs": [],
@@ -111,19 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": 689,
    "id": "3abd239d-b2a5-48c0-aa28-b6c2df379b99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filter Funding Stage\n",
-    "stage = driver.find_element(By.CSS_SELECTOR,'div > div > input[aria-label*=\"Seed\"]') # selecting stage\n",
-    "driver.execute_script(\"arguments[0].click();\", stage)"
+    "# Filter Funding Stages\n",
+    "stages = driver.find_element(By.CSS_SELECTOR,'div > div > input[aria-label*=\"Seed\"]') # selecting stage\n",
+    "                                                                                      # changing the css input sting input[aria-label*=\"Seed\"]\n",
+    "driver.execute_script(\"arguments[0].click();\", stages)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 656,
+   "execution_count": 690,
    "id": "3d803037-da51-497c-8bdd-00dc68649164",
    "metadata": {},
    "outputs": [],
@@ -135,68 +136,173 @@
     "filteractive= driver.find_element(By.CSS_SELECTOR, 'div > div input[aria-label*=\"Active\"]') # checking the Active Checkbox\n",
     "driver.execute_script(\"arguments[0].click();\", filteractive)\n",
     "\n",
-    "applybutton = driver.find_element(By.XPATH,'//*[@id=\"app\"]/div[5]/div/div/div[3]/div/div/button/div') # clicking the apply button\n",
+    "applybutton = driver.find_element(By.CSS_SELECTOR,'div.v-card__actions > div > div > button[type*=\"button\"][class$=\"primary\"]') # clicking the apply button\n",
     "driver.execute_script(\"arguments[0].click();\", applybutton)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 657,
+   "execution_count": 691,
    "id": "e284375c-cd7a-4c2f-acc3-26a6b986d462",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Click on Company Cards \n",
-    "# Loop through every entity display name to open in new tab\n",
-    "\n",
-    "companycard= driver.find_element(By.CSS_SELECTOR, 'div[class*=\"entity__display-name\"]')\n",
-    "companycard.click()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 658,
-   "id": "6f953ac6-7014-49c6-ab5c-83bb87fd11b6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Seed\n"
+     "ename": "StaleElementReferenceException",
+     "evalue": "Message: stale element reference: element is not attached to the page document\n  (Session info: chrome=100.0.4896.127)\nStacktrace:\nBacktrace:\n\tOrdinal0 [0x01207413+2389011]\n\tOrdinal0 [0x01199F61+1941345]\n\tOrdinal0 [0x0108C658+837208]\n\tOrdinal0 [0x0108F064+847972]\n\tOrdinal0 [0x0108EF22+847650]\n\tOrdinal0 [0x0108F1B0+848304]\n\tOrdinal0 [0x010B8EF2+1019634]\n\tOrdinal0 [0x010B949B+1021083]\n\tOrdinal0 [0x010AF9F1+981489]\n\tOrdinal0 [0x010D4194+1130900]\n\tOrdinal0 [0x010AF974+981364]\n\tOrdinal0 [0x010D4364+1131364]\n\tOrdinal0 [0x010E4302+1196802]\n\tOrdinal0 [0x010D3F66+1130342]\n\tOrdinal0 [0x010AE546+976198]\n\tOrdinal0 [0x010AF456+980054]\n\tGetHandleVerifier [0x013B9632+1727522]\n\tGetHandleVerifier [0x0146BA4D+2457661]\n\tGetHandleVerifier [0x0129EB81+569713]\n\tGetHandleVerifier [0x0129DD76+566118]\n\tOrdinal0 [0x011A0B2B+1968939]\n\tOrdinal0 [0x011A5988+1989000]\n\tOrdinal0 [0x011A5A75+1989237]\n\tOrdinal0 [0x011AECB1+2026673]\n\tBaseThreadInitThunk [0x769EFA29+25]\n\tRtlGetAppContainerNamedObjectPath [0x77187A7E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77187A4E+238]\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStaleElementReferenceException\u001b[0m            Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\JEFFRE~1\\AppData\\Local\\Temp/ipykernel_3596/2680893232.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mresult\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdirectoryresult\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m     \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_element\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCSS_SELECTOR\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'a[href^=\"/profiles/\"][class=\"card entity entity--shadow\"]'\u001b[0m\u001b[1;33m)\u001b[0m     \u001b[1;31m#Clicking the urls\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m     \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py\u001b[0m in \u001b[0;36mfind_element\u001b[1;34m(self, by, value)\u001b[0m\n\u001b[0;32m    733\u001b[0m             \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'[name=\"%s\"]'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    734\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 735\u001b[1;33m         return self._execute(Command.FIND_CHILD_ELEMENT,\n\u001b[0m\u001b[0;32m    736\u001b[0m                              {\"using\": by, \"value\": value})['value']\n\u001b[0;32m    737\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py\u001b[0m in \u001b[0;36m_execute\u001b[1;34m(self, command, params)\u001b[0m\n\u001b[0;32m    708\u001b[0m             \u001b[0mparams\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    709\u001b[0m         \u001b[0mparams\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'id'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_id\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 710\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    711\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    712\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mfind_element\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mby\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mID\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\u001b[0m in \u001b[0;36mexecute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    422\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommand_executor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdriver_command\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    423\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 424\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merror_handler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_response\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    425\u001b[0m             response['value'] = self._unwrap_value(\n\u001b[0;32m    426\u001b[0m                 response.get('value', None))\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py\u001b[0m in \u001b[0;36mcheck_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    245\u001b[0m                 \u001b[0malert_text\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'alert'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'text'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    246\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malert_text\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 247\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    248\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    249\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_value_or_default\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mMapping\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0m_KT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0m_KT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mStaleElementReferenceException\u001b[0m: Message: stale element reference: element is not attached to the page document\n  (Session info: chrome=100.0.4896.127)\nStacktrace:\nBacktrace:\n\tOrdinal0 [0x01207413+2389011]\n\tOrdinal0 [0x01199F61+1941345]\n\tOrdinal0 [0x0108C658+837208]\n\tOrdinal0 [0x0108F064+847972]\n\tOrdinal0 [0x0108EF22+847650]\n\tOrdinal0 [0x0108F1B0+848304]\n\tOrdinal0 [0x010B8EF2+1019634]\n\tOrdinal0 [0x010B949B+1021083]\n\tOrdinal0 [0x010AF9F1+981489]\n\tOrdinal0 [0x010D4194+1130900]\n\tOrdinal0 [0x010AF974+981364]\n\tOrdinal0 [0x010D4364+1131364]\n\tOrdinal0 [0x010E4302+1196802]\n\tOrdinal0 [0x010D3F66+1130342]\n\tOrdinal0 [0x010AE546+976198]\n\tOrdinal0 [0x010AF456+980054]\n\tGetHandleVerifier [0x013B9632+1727522]\n\tGetHandleVerifier [0x0146BA4D+2457661]\n\tGetHandleVerifier [0x0129EB81+569713]\n\tGetHandleVerifier [0x0129DD76+566118]\n\tOrdinal0 [0x011A0B2B+1968939]\n\tOrdinal0 [0x011A5988+1989000]\n\tOrdinal0 [0x011A5A75+1989237]\n\tOrdinal0 [0x011AECB1+2026673]\n\tBaseThreadInitThunk [0x769EFA29+25]\n\tRtlGetAppContainerNamedObjectPath [0x77187A7E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77187A4E+238]\n"
      ]
     }
    ],
    "source": [
-    "# Grabbing Company Contact Details \n",
+    "# Click on Company Cards \n",
+    "# Loop through every entity display name to open in new tab\n",
     "\n",
-    "driver.switch_to.window(driver.window_handles[1]) # handles switch to window 1  \n",
+    "founder = []\n",
+    "company_email = []\n",
+    "phone = []\n",
+    "linkedin = []\n",
+    "company_name = []\n",
+    "employee_number = []\n",
+    "company_stage = []\n",
+    "\n",
+    "# directoryresult = driver.find_element(By.XPATH, '//*[@id=\"app\"]/div[12]/div/main/div/div/div/section/section/div[3]/div') # Selecting the directory result by xpath\n",
+    "directoryresult = driver.find_elements(By.CSS_SELECTOR, 'section > section > div.v-data-iterator.theme--light > div > div[class*=\"flex xs12\"]') # Selecting the directory result by css selector\n",
+    "\n",
+    "for result in directoryresult:\n",
+    "    \n",
+    "    result.find_element(By.CSS_SELECTOR, 'a[href^=\"/profiles/\"][class=\"card entity entity--shadow\"]')     #Clicking the urls\n",
+    "    result.click()\n",
+    "    \n",
+    "    driver.switch_to.window(driver.window_handles[1]) # handles switch to window 1 \n",
+    "    driver.implicitly_wait(3)\n",
+    "    \n",
+    "    try:\n",
+    "        name = WebDriverWait(driver, 3).until(\n",
+    "            EC.presence_of_element_located((By.CSS_SELECTOR, 'h4[class*=\"team__name\"'))\n",
+    "        )\n",
+    "        founder.append(name.text)\n",
+    "    except:\n",
+    "        continue \n",
+    "    try:\n",
+    "        email = WebDriverWait(driver, 3).until(\n",
+    "            EC.presence_of_element_located((By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[1]/li[3]/a'))\n",
+    "        )\n",
+    "        company_email.append(email.text)\n",
+    "    except:\n",
+    "        continue\n",
+    "    try:\n",
+    "        phone_number = WebDriverWait(driver, 3).until(\n",
+    "            EC.presence_of_element_located((By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[1]/li[4]/span'))\n",
+    "        )\n",
+    "        phone.append(phone_number.text)\n",
+    "    except:\n",
+    "        continue \n",
+    "    try:\n",
+    "        Linkedin = WebDriverWait(driver, 3).until(\n",
+    "            EC.presence_of_element_located((By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[2]/li[3]/a'))\n",
+    "        )\n",
+    "        linkedin.append(Linkedin.get_attribute('href'))\n",
+    "    except:\n",
+    "        continue                         \n",
+    "\n",
+    "    try:\n",
+    "        company = WebDriverWait(driver, 3).until(\n",
+    "            EC.presence_of_element_located((By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[2]/li[3]/a'))\n",
+    "        )\n",
+    "        company_name.append(commpany.text)\n",
+    "    except:\n",
+    "        continue     \n",
+    "\n",
+    "    try:\n",
+    "        employee_range = WebDriverWait(driver, 3).until(\n",
+    "            EC.presence_of_element_located((By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[2]/li[3]/a'))\n",
+    "        )\n",
+    "        employee_number.append(employee_range.text)\n",
+    "    except:\n",
+    "        continue\n",
+    "\n",
+    "    try:\n",
+    "        funding_round = WebDriverWait(driver, 3).until(\n",
+    "            EC.presence_of_element_located((By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[2]/li[3]/a'))\n",
+    "        )\n",
+    "        company_stage.append(funding_round.text)\n",
+    "    except:\n",
+    "        continue                                            \n",
+    "                                               \n",
+    "    driver.close() # Close the new window\n",
+    "    driver.switch_to.window(driver.window_handles[0]) # handles Switching back to main window    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e38e932f-6332-43b6-a07a-bac0dee50768",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(founder)\n",
+    "print(companyemail)\n",
+    "print(phonenum)\n",
+    "print(linkedin)\n",
+    "print(companyname)\n",
+    "print(employeenumber)\n",
+    "print(companystage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f953ac6-7014-49c6-ab5c-83bb87fd11b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # # Grabbing Company Contact Details \n",
+    "\n",
+    "# driver.switch_to.window(driver.window_handles[1]) # handles switch to window 1  \n",
+    "\n",
+    "# founder = []\n",
+    "# companyemail = []\n",
+    "# phonenum = []\n",
+    "# linkedin = []\n",
+    "# companyname = []\n",
+    "# employeenumber = []\n",
+    "# companystage = []\n",
+    "\n",
     "\n",
     "# name = driver.find_element(By.CSS_SELECTOR, 'h4[class*=\"team__name\"]').text\n",
-    "# print(name)\n",
+    "# founder.append(name)\n",
     "\n",
     "# email = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[1]/li[3]/a').text\n",
-    "# print(email)\n",
+    "# companyemail.append(email)\n",
     "\n",
     "# phone_number = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[1]/li[4]/span').text\n",
-    "# print(phone_number)\n",
+    "# phonenum.append(phone_number)\n",
     "\n",
     "# Linkedin = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[2]/li[3]/a')\n",
-    "# print (Linkedin.get_attribute('href'))\n",
-    "\n",
+    "# linkedin.append(Linkedin.get_attribute('href'))\n",
     "\n",
     "# company = driver.find_element(By.XPATH, '//*[@id=\"app\"]/div[7]/div/main/div/div/section/div[1]/div/section/div/div/div[1]/header/div/div[2]/h1').text\n",
-    "# print(company)\n",
+    "# companyname.append(company)\n",
     "\n",
     "# Employee_range = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[1]/div/div/div[4]/div[2]').text\n",
-    "# print(Employee_range)\n",
+    "# employeenunber.append(Employee_range)\n",
     "\n",
-    "Funding_round = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[1]/div/div/div[3]/div[2]').text\n",
-    "print(Funding_round)\n",
+    "# Funding_round = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[1]/div/div/div[3]/div[2]').text\n",
+    "# companystage.append(Funding_round)\n",
     "\n",
-    "driver.close() # Close the new window\n",
+    "# driver.close() # Close the new window\n",
     "\n",
-    "# driver.switch_to.window(driver.window_handles[0]) # handles Switching back to main window    "
+    "# # driver.switch_to.window(driver.window_handles[0]) # handles Switching back to main window    "
    ]
   }
  ],
