--- a/Scrape_Script.ipynb
+++ b/Scrape_Script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 684,
+   "execution_count": 143,
    "id": "94077bdc-b7d7-4043-8324-6e38d38c0c20",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 685,
+   "execution_count": 144,
    "id": "8f81c82c-bced-4bff-80ff-81bb0e882c4a",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": 145,
    "id": "c4466258-3d70-4d6f-8a49-87dfd7962e78",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": 146,
    "id": "8cb17e5f-7789-4c3f-b117-8ec663ef97ae",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 147,
    "id": "d303ca37-118c-48df-bc87-124c81efcfe7",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 689,
+   "execution_count": 148,
    "id": "3abd239d-b2a5-48c0-aa28-b6c2df379b99",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 690,
+   "execution_count": 149,
    "id": "3d803037-da51-497c-8bdd-00dc68649164",
    "metadata": {},
    "outputs": [],
@@ -142,23 +142,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 691,
+   "execution_count": 150,
    "id": "e284375c-cd7a-4c2f-acc3-26a6b986d462",
    "metadata": {},
    "outputs": [
     {
      "ename": "StaleElementReferenceException",
-     "evalue": "Message: stale element reference: element is not attached to the page document\n  (Session info: chrome=100.0.4896.127)\nStacktrace:\nBacktrace:\n\tOrdinal0 [0x01207413+2389011]\n\tOrdinal0 [0x01199F61+1941345]\n\tOrdinal0 [0x0108C658+837208]\n\tOrdinal0 [0x0108F064+847972]\n\tOrdinal0 [0x0108EF22+847650]\n\tOrdinal0 [0x0108F1B0+848304]\n\tOrdinal0 [0x010B8EF2+1019634]\n\tOrdinal0 [0x010B949B+1021083]\n\tOrdinal0 [0x010AF9F1+981489]\n\tOrdinal0 [0x010D4194+1130900]\n\tOrdinal0 [0x010AF974+981364]\n\tOrdinal0 [0x010D4364+1131364]\n\tOrdinal0 [0x010E4302+1196802]\n\tOrdinal0 [0x010D3F66+1130342]\n\tOrdinal0 [0x010AE546+976198]\n\tOrdinal0 [0x010AF456+980054]\n\tGetHandleVerifier [0x013B9632+1727522]\n\tGetHandleVerifier [0x0146BA4D+2457661]\n\tGetHandleVerifier [0x0129EB81+569713]\n\tGetHandleVerifier [0x0129DD76+566118]\n\tOrdinal0 [0x011A0B2B+1968939]\n\tOrdinal0 [0x011A5988+1989000]\n\tOrdinal0 [0x011A5A75+1989237]\n\tOrdinal0 [0x011AECB1+2026673]\n\tBaseThreadInitThunk [0x769EFA29+25]\n\tRtlGetAppContainerNamedObjectPath [0x77187A7E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77187A4E+238]\n",
+     "evalue": "Message: stale element reference: element is not attached to the page document\n  (Session info: chrome=100.0.4896.127)\nStacktrace:\nBacktrace:\n\tOrdinal0 [0x009F7413+2389011]\n\tOrdinal0 [0x00989F61+1941345]\n\tOrdinal0 [0x0087C658+837208]\n\tOrdinal0 [0x0087F064+847972]\n\tOrdinal0 [0x0087EF22+847650]\n\tOrdinal0 [0x0087F1B0+848304]\n\tOrdinal0 [0x008A8EF2+1019634]\n\tOrdinal0 [0x008A949B+1021083]\n\tOrdinal0 [0x0089F9F1+981489]\n\tOrdinal0 [0x008C4194+1130900]\n\tOrdinal0 [0x0089F974+981364]\n\tOrdinal0 [0x008C4364+1131364]\n\tOrdinal0 [0x008D4302+1196802]\n\tOrdinal0 [0x008C3F66+1130342]\n\tOrdinal0 [0x0089E546+976198]\n\tOrdinal0 [0x0089F456+980054]\n\tGetHandleVerifier [0x00BA9632+1727522]\n\tGetHandleVerifier [0x00C5BA4D+2457661]\n\tGetHandleVerifier [0x00A8EB81+569713]\n\tGetHandleVerifier [0x00A8DD76+566118]\n\tOrdinal0 [0x00990B2B+1968939]\n\tOrdinal0 [0x00995988+1989000]\n\tOrdinal0 [0x00995A75+1989237]\n\tOrdinal0 [0x0099ECB1+2026673]\n\tBaseThreadInitThunk [0x76CDFA29+25]\n\tRtlGetAppContainerNamedObjectPath [0x77D57A7E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77D57A4E+238]\n",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mStaleElementReferenceException\u001b[0m            Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\JEFFRE~1\\AppData\\Local\\Temp/ipykernel_3596/2680893232.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mresult\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdirectoryresult\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m     \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_element\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCSS_SELECTOR\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'a[href^=\"/profiles/\"][class=\"card entity entity--shadow\"]'\u001b[0m\u001b[1;33m)\u001b[0m     \u001b[1;31m#Clicking the urls\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m     \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\JEFFRE~1\\AppData\\Local\\Temp/ipykernel_11040/4074586827.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mresult\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdirectoryresult\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m     \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_element\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCSS_SELECTOR\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'a[href^=\"/profiles/\"][class=\"card entity entity--shadow\"]'\u001b[0m\u001b[1;33m)\u001b[0m    \u001b[1;31m# Clicking the urls\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m     \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[1;31m# driver.implicitly_wait(10)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py\u001b[0m in \u001b[0;36mfind_element\u001b[1;34m(self, by, value)\u001b[0m\n\u001b[0;32m    733\u001b[0m             \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'[name=\"%s\"]'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    734\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 735\u001b[1;33m         return self._execute(Command.FIND_CHILD_ELEMENT,\n\u001b[0m\u001b[0;32m    736\u001b[0m                              {\"using\": by, \"value\": value})['value']\n\u001b[0;32m    737\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py\u001b[0m in \u001b[0;36m_execute\u001b[1;34m(self, command, params)\u001b[0m\n\u001b[0;32m    708\u001b[0m             \u001b[0mparams\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    709\u001b[0m         \u001b[0mparams\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'id'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_id\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 710\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    711\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    712\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mfind_element\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mby\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mID\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\u001b[0m in \u001b[0;36mexecute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    422\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommand_executor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdriver_command\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    423\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 424\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merror_handler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_response\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    425\u001b[0m             response['value'] = self._unwrap_value(\n\u001b[0;32m    426\u001b[0m                 response.get('value', None))\n",
       "\u001b[1;32m~\\anaconda3\\envs\\py3\\lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py\u001b[0m in \u001b[0;36mcheck_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    245\u001b[0m                 \u001b[0malert_text\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'alert'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'text'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    246\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malert_text\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 247\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    248\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    249\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_value_or_default\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mMapping\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0m_KT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0m_KT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0m_VT\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mStaleElementReferenceException\u001b[0m: Message: stale element reference: element is not attached to the page document\n  (Session info: chrome=100.0.4896.127)\nStacktrace:\nBacktrace:\n\tOrdinal0 [0x01207413+2389011]\n\tOrdinal0 [0x01199F61+1941345]\n\tOrdinal0 [0x0108C658+837208]\n\tOrdinal0 [0x0108F064+847972]\n\tOrdinal0 [0x0108EF22+847650]\n\tOrdinal0 [0x0108F1B0+848304]\n\tOrdinal0 [0x010B8EF2+1019634]\n\tOrdinal0 [0x010B949B+1021083]\n\tOrdinal0 [0x010AF9F1+981489]\n\tOrdinal0 [0x010D4194+1130900]\n\tOrdinal0 [0x010AF974+981364]\n\tOrdinal0 [0x010D4364+1131364]\n\tOrdinal0 [0x010E4302+1196802]\n\tOrdinal0 [0x010D3F66+1130342]\n\tOrdinal0 [0x010AE546+976198]\n\tOrdinal0 [0x010AF456+980054]\n\tGetHandleVerifier [0x013B9632+1727522]\n\tGetHandleVerifier [0x0146BA4D+2457661]\n\tGetHandleVerifier [0x0129EB81+569713]\n\tGetHandleVerifier [0x0129DD76+566118]\n\tOrdinal0 [0x011A0B2B+1968939]\n\tOrdinal0 [0x011A5988+1989000]\n\tOrdinal0 [0x011A5A75+1989237]\n\tOrdinal0 [0x011AECB1+2026673]\n\tBaseThreadInitThunk [0x769EFA29+25]\n\tRtlGetAppContainerNamedObjectPath [0x77187A7E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77187A4E+238]\n"
+      "\u001b[1;31mStaleElementReferenceException\u001b[0m: Message: stale element reference: element is not attached to the page document\n  (Session info: chrome=100.0.4896.127)\nStacktrace:\nBacktrace:\n\tOrdinal0 [0x009F7413+2389011]\n\tOrdinal0 [0x00989F61+1941345]\n\tOrdinal0 [0x0087C658+837208]\n\tOrdinal0 [0x0087F064+847972]\n\tOrdinal0 [0x0087EF22+847650]\n\tOrdinal0 [0x0087F1B0+848304]\n\tOrdinal0 [0x008A8EF2+1019634]\n\tOrdinal0 [0x008A949B+1021083]\n\tOrdinal0 [0x0089F9F1+981489]\n\tOrdinal0 [0x008C4194+1130900]\n\tOrdinal0 [0x0089F974+981364]\n\tOrdinal0 [0x008C4364+1131364]\n\tOrdinal0 [0x008D4302+1196802]\n\tOrdinal0 [0x008C3F66+1130342]\n\tOrdinal0 [0x0089E546+976198]\n\tOrdinal0 [0x0089F456+980054]\n\tGetHandleVerifier [0x00BA9632+1727522]\n\tGetHandleVerifier [0x00C5BA4D+2457661]\n\tGetHandleVerifier [0x00A8EB81+569713]\n\tGetHandleVerifier [0x00A8DD76+566118]\n\tOrdinal0 [0x00990B2B+1968939]\n\tOrdinal0 [0x00995988+1989000]\n\tOrdinal0 [0x00995A75+1989237]\n\tOrdinal0 [0x0099ECB1+2026673]\n\tBaseThreadInitThunk [0x76CDFA29+25]\n\tRtlGetAppContainerNamedObjectPath [0x77D57A7E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77D57A4E+238]\n"
      ]
     }
    ],
@@ -168,27 +168,57 @@
     "\n",
     "founder = []\n",
     "company_email = []\n",
-    "phone = []\n",
-    "linkedin = []\n",
+    "phone_number = []\n",
     "company_name = []\n",
     "employee_number = []\n",
     "company_stage = []\n",
+    "linkedin = []\n",
     "\n",
     "# directoryresult = driver.find_element(By.XPATH, '//*[@id=\"app\"]/div[12]/div/main/div/div/div/section/section/div[3]/div') # Selecting the directory result by xpath\n",
     "directoryresult = driver.find_elements(By.CSS_SELECTOR, 'section > section > div.v-data-iterator.theme--light > div > div[class*=\"flex xs12\"]') # Selecting the directory result by css selector\n",
+    "# cur_win = driver.current_window_handle\n",
     "\n",
     "for result in directoryresult:\n",
-    "    \n",
-    "    result.find_element(By.CSS_SELECTOR, 'a[href^=\"/profiles/\"][class=\"card entity entity--shadow\"]')     #Clicking the urls\n",
+    "    result.find_element(By.CSS_SELECTOR, 'a[href^=\"/profiles/\"][class=\"card entity entity--shadow\"]')    # Clicking the urls\n",
     "    result.click()\n",
+    "    # driver.implicitly_wait(10)\n",
     "    \n",
-    "    driver.switch_to.window(driver.window_handles[1]) # handles switch to window 1 \n",
-    "    driver.implicitly_wait(3)\n",
-    "                                    \n",
+    "    try:\n",
+    "        driver.switch_to.window(driver.window_handles[1]) # handles switch to new window\n",
+    "\n",
+    "        company = driver.find_element(By.XPATH, '//*[@id=\"app\"]/div[7]/div/main/div/div/section/div[1]/div/section/div/div/div[1]/header/div/div[2]/h1').text\n",
+    "        company_name.append(company)\n",
+    "\n",
+    "        employee_range = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[1]/div/div/div[4]/div[2]').text\n",
+    "        employee_number.append(employee_range)\n",
+    "\n",
+    "        funding_round = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[1]/div/div/div[3]/div[2]').text\n",
+    "        company_stage.append(funding_round)\n",
+    "\n",
+    "        name = driver.find_element(By.CSS_SELECTOR, 'h4[class*=\"team__name\"]').text\n",
+    "        founder.append(name)\n",
+    "\n",
+    "        email = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[1]/li[3]/a').text\n",
+    "        company_email.append(email)\n",
+    "\n",
+    "        phone = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[1]/li[4]/span').text\n",
+    "        phone_number.append(phone)\n",
+    "\n",
+    "        Linkedin = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[2]/li/a[@href=\"https://www.linkedin.com/\"]')\n",
+    "        linkedin.append(Linkedin.get_attribute('href'))\n",
+    "        \n",
+    "        Linkedin_1 = driver.find_element(By.XPATH, '//*[@id=\"general\"]/div/div/div/div[2]/div/div[2]/div/ul[2]/li[3]/a[@href=\"https://www.linkedin.com/\"]')\n",
+    "        linkedin.append(Linkedin_1.get_attribute('href'))\n",
+    "        \n",
+    "    except:\n",
+    "        print(\"Can't get item\")\n",
+    "    finally:\n",
+    "        driver.close()\n",
     "                                               \n",
-    "    driver.close() # Close the new window\n",
+    "    # driver.close() # Close the new window\n",
+    "\n",
     "    driver.switch_to.window(driver.window_handles[0]) # handles Switching back to main window    \n",
-    "    "
+    "    # driver.switch_to.window(cur_win)"
    ]
   },
   {
@@ -199,12 +229,12 @@
    "outputs": [],
    "source": [
     "print(founder)\n",
-    "print(companyemail)\n",
-    "print(phonenum)\n",
-    "print(linkedin)\n",
-    "print(companyname)\n",
-    "print(employeenumber)\n",
-    "print(companystage)"
+    "print(company_email)\n",
+    "print(phone_number)\n",
+    "print(company_name)\n",
+    "print(employee_number)\n",
+    "print(company_stage)\n",
+    "print(linkedin)"
    ]
   },
   {
@@ -226,6 +256,10 @@
     "# employeenumber = []\n",
     "# companystage = []\n",
     "\n",
+    "\n",
+    "\n",
+    "# name = driver.find_element(By.XPATH, '//*[@id=\"team\"]/div/div/div/div[2]/div/div[2]/h4').text\n",
+    "# founder.append(name)\n",
     "\n",
     "# name = driver.find_element(By.CSS_SELECTOR, 'h4[class*=\"team__name\"]').text\n",
     "# founder.append(name)\n",
